[package]
name = "firstaide"
version = "0.1.0"
authors = ["Gavin Panella <gavinpanella@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2.1"
bstr = "0.2.8"
clap = "2.33.0"
crypto-hash = "0.3.4"
path-absolutize = "1.1.7"
semver = "0.9.0"
serde = { version = "1.0.104", features = ["derive"] }
tempfile = "3.1.0"
