[package]
name = "firstaide"
version = "0.1.6"
authors = ["Gavin Panella <gavinpanella@gmail.com>"]
edition = "2018"
description = "Bootstrap and cache Nix environments; works with direnv."
readme = "README.md"
repository = "https://github.com/allenap/firstaide"
license = "Apache-2.0"
categories = ["command-line-utilities"]

[badges]
travis-ci = { repository = "allenap/firstaide", branch = "master" }

[dependencies]
atty = "0.2.14"
bincode = "1.3.3"
bstr = "0.2.17"
chrono = "0.4.19"
clap = { version = "3.0.5", features = [ "std", "color", "suggestions", "derive", "cargo" ] }
crypto-hash = "0.3.4"
dirs = "4.0.0"
fern = "0.6.0"
log = "0.4.14"
path-absolutize = "3.0.11"
semver = "1.0.4"
serde = { version = "1.0.133", features = ["derive"] }
shell-quote = "0.1.0"
spinners = "2.0.0"
thiserror = "1.0.30"
tempfile = "3.3.0"
toml = "0.5.8"
